--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -284,7 +284,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="TNv-YC-mTa" kind="modal" identifier="Settings" modalTransitionStyle="flipHorizontal" id="2x2-Cf-BeI"/>
+                                    <action selector="settingsButtonPressed:" destination="QqC-Gy-unH" eventType="touchUpInside" id="QiG-bF-1E3"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -316,77 +316,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QOl-Qn-9I6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-34" y="61"/>
-        </scene>
-        <!--Settings View Controller-->
-        <scene sceneID="Zje-Ok-nYe">
-            <objects>
-                <viewController id="jfq-kF-nIF" customClass="BCSettingsViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Jjs-yt-mvt">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Q4q-8l-zpg">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.87058823529999996" green="0.57254901960000004" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="62" sectionHeaderHeight="22" sectionFooterHeight="22" id="Si5-s9-M3f">
-                                <rect key="frame" x="0.0" y="41" width="320" height="282"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.97647058819999999" green="0.90196078430000004" blue="0.83137254900000002" alpha="1" colorSpace="deviceRGB"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="uyj-Ng-Sjw">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="62"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Wz1-3W-W5D">
-                                        <rect key="frame" x="0.0" y="84" width="320" height="62"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="NsD-HU-3ps">
-                                        <rect key="frame" x="0.0" y="146" width="320" height="62"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Nri-Dq-DSg">
-                                        <rect key="frame" x="0.0" y="208" width="320" height="62"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.97647058819999999" green="0.90196078430000004" blue="0.83137254900000002" alpha="1" colorSpace="deviceRGB"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="9PL-hU-aV6"/>
-                    <connections>
-                        <outlet property="titleLabel" destination="Q4q-8l-zpg" id="Yaf-Ru-eaR"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="CCE-ly-pSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1155" y="-353"/>
         </scene>
         <!--Motivational List View Controller-->
         <scene sceneID="Z5V-if-HFd">
@@ -1134,24 +1063,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             </objects>
             <point key="canvasLocation" x="-34" y="729"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="mJH-8N-SxH">
-            <objects>
-                <navigationController navigationBarHidden="YES" id="TNv-YC-mTa" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5RV-IF-ulF">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="jfq-kF-nIF" kind="relationship" relationship="rootViewController" id="GHE-pK-ViH"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XTe-mU-MNP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="617" y="-353"/>
-        </scene>
     </scenes>
     <resources>
         <image name="blue-circle-selected.png" width="29" height="29"/>
@@ -1171,121 +1082,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="settings.png" width="41" height="42"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
-    <classes>
-        <class className="BCAveragesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAveragesViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="averageLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="averagesScrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="fifteenMinuteDuration" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fifteenMinuteFrequency" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fifteenMinuteIntensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fifteenMinuteNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="minuteNumberScrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="oneHourDuration" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="oneHourFrequency" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="oneHourIntensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="pageControl" candidateClass="BCPageControl"/>
-                <relationship kind="outlet" name="sixtyMinuteNumberLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteDuration" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteFrequency" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteIntensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="thirtyMinuteNumberLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCBaseViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backButtonPressed:"/>
-            </relationships>
-        </class>
-        <class className="BCContractionCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="savePressed:"/>
-                <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="doneBannerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="doneButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="durationPickerView" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fadeView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="startTimeLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="startTimePickerView" candidateClass="UIDatePicker"/>
-                <relationship kind="outlet" name="startTimeTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCFrequencyCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCHistoryViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
-                <relationship kind="outlet" name="contractionTableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="durationHeaderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyHeaderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyTableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="headerContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="intensityHeaderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="selectedContractionHandle" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="BCMotivationalListViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
-        </class>
-        <class className="BCPageControl" superclassName="UIPageControl">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
-        </class>
-        <class className="BCRootViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="inspirationalLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
-                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="settingsButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCSettingsViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="clearContractions:"/>
-                <relationship kind="action" name="displayOnChanged:" candidateClass="UISwitch"/>
-                <relationship kind="action" name="doneButtonPressed:"/>
-                <relationship kind="outlet" name="displayOnSwitch" candidateClass="UISwitch"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
